# Libraries.
add_subdirectory(CodeTranslator)
add_subdirectory(Common)
add_subdirectory(Content)
add_subdirectory(Editor)
add_subdirectory(Engine)
add_subdirectory(Gameplay)
add_subdirectory(Geometry)
add_subdirectory(Graphics)
add_subdirectory(Meta)
add_subdirectory(Networking)
add_subdirectory(Physics)
add_subdirectory(Replication)
add_subdirectory(Serialization)
add_subdirectory(Sound)
add_subdirectory(SpatialPartition)
add_subdirectory(Startup)
add_subdirectory(Support)
add_subdirectory(UiWidget)
add_subdirectory(Widget)
add_subdirectory(Zilch)
add_subdirectory(ZilchScript)
add_subdirectory(ZilchShaders)

# Executables.
add_subdirectory(BrowserSubProcess)
add_subdirectory(WelderEditor)
add_subdirectory(WelderLauncher)
add_subdirectory(WelderLauncherShell)
